--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Macrocephal Corp.</title>
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
 </head>
 <body>
     <nav>
