--- a/index.html
+++ b/index.html
@@ -25,7 +25,51 @@
         <aside>aside</aside>
     </main>
     <footer>
-        footer
+        <div>
+            <header class="headline">
+                Company
+            </header>
+            <div>
+                <a href="/-/goals">
+                    Goals
+                </a>
+                <a href="/-/locations">
+                    Locations
+                </a>
+                <a href="/-/background">
+                    Background
+                </a>
+            </div>
+        </div>
+        <div>
+            <header class="headline">
+                Services
+            </header>
+            <div>
+                <a href="/-/service/e-learning">
+                    E-learning
+                </a>
+                <a href="/-/service/data-sciences">
+                    Data Sciences
+                </a>
+                <a href="/-/service/certifications">
+                    Certifications
+                </a>
+            </div>
+        </div>
+        <div>
+            <header class="headline">
+                Contact
+            </header>
+            <div>
+                <a href="mailto:salathielgenese+macrocephal-corp@gmail.com">
+                    Macrocephal Corp.
+                </a>
+                <a href="tel:+237695312838">
+                    +237 695 31 28 38
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
