--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/index.css">
     <title>Macrocephal Corp.</title>
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
 </head>
@@ -31,12 +33,15 @@
             </header>
             <div>
                 <a href="/-/goals">
+                    <i class="fas fa-dot-circle"></i>
                     Goals
                 </a>
                 <a href="/-/locations">
+                    <i class="fas fa-map"></i>
                     Locations
                 </a>
                 <a href="/-/background">
+                    <i class="fas fa-history"></i>
                     Background
                 </a>
             </div>
@@ -47,12 +52,15 @@
             </header>
             <div>
                 <a href="/-/service/e-learning">
+                    <i class="fas fa-graduation-cap"></i>
                     E-learning
                 </a>
                 <a href="/-/service/data-sciences">
+                    <i class="fas fa-microchip"></i>
                     Data Sciences
                 </a>
                 <a href="/-/service/certifications">
+                    <i class="fas fa-certificate"></i>
                     Certifications
                 </a>
             </div>
@@ -63,9 +71,11 @@
             </header>
             <div>
                 <a href="mailto:salathielgenese+macrocephal-corp@gmail.com">
+                    <i class="far fa-envelope"></i>
                     Macrocephal Corp.
                 </a>
                 <a href="tel:+237695312838">
+                    <i class="fas fa-sms"></i>
                     +237 695 31 28 38
                 </a>
             </div>
