--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
+
+    <link rel="icon" href="./img/favicon.png">
 </head>
 <body>
     <nav>
