--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 </head>
 <body>
     <nav>
-        navbar
+        <a href="/">
+            Macrocephal Corps.
+        </a>
+        <hr>
+        <a href="/services">
+            Services
+        </a>
+        <a href="/contact">
+            Contact
+        </a>
+        <a href="/contact">
+            About
+        </a>
     </nav>
     <main>
         <section>
