add text to text sticky positioning

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente ut laboriosam quod molestias corrupti, aut quia nihil ab blanditiis accusamus distinctio amet dolorem dolor! Sunt reprehenderit dolor nihil maiores?</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati nobis qui eum exercitationem vero quos quisquam minima dolores autem aperiam deserunt ipsa itaque eligendi, nam maiores necessitatibus in accusamus architecto?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nam dolorem placeat beatae deleniti! Unde assumenda aliquid tempora quos at, aspernatur quod, ad iure modi, obcaecati commodi amet. Voluptatem, et!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore laboriosam, praesentium obcaecati quos asperiores sunt nam necessitatibus. Exercitationem officia cum, at ratione est, eos consectetur quibusdam ab repellat, pariatur beatae.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores voluptatibus ratione dolor commodi qui, ab magnam quod natus ducimus sunt sit sed, laborum praesentium reprehenderit vitae similique. Dolor, quidem natus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis maxime tenetur saepe eius aut amet, quia neque quaerat doloremque expedita consequuntur deleniti, recusandae, itaque numquam iste odit ex ipsum dolore.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae exercitationem molestias libero asperiores pariatur nulla minus laboriosam ipsam ipsa? Magni ratione dolor temporibus commodi debitis eum cumque facilis deleniti necessitatibus.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto eveniet quaerat sed reprehenderit facere dignissimos, officia earum suscipit repellendus voluptatem inventore provident mollitia ipsa saepe commodi quas omnis quasi. Esse!</p>
         </section>
     </main>
     <footer>
