--- a/index.html
+++ b/index.html
@@ -32,17 +32,55 @@
             About
         </a>
     </nav>
-    <main>
+    <main class="parallax">
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quae, aliquam eum voluptas inventore a! Eveniet iure, eos itaque, laboriosam eius facere fugiat obcaecati aliquid accusamus alias quis pariatur dolorum?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente ut laboriosam quod molestias corrupti, aut quia nihil ab blanditiis accusamus distinctio amet dolorem dolor! Sunt reprehenderit dolor nihil maiores?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati nobis qui eum exercitationem vero quos quisquam minima dolores autem aperiam deserunt ipsa itaque eligendi, nam maiores necessitatibus in accusamus architecto?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nam dolorem placeat beatae deleniti! Unde assumenda aliquid tempora quos at, aspernatur quod, ad iure modi, obcaecati commodi amet. Voluptatem, et!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore laboriosam, praesentium obcaecati quos asperiores sunt nam necessitatibus. Exercitationem officia cum, at ratione est, eos consectetur quibusdam ab repellat, pariatur beatae.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores voluptatibus ratione dolor commodi qui, ab magnam quod natus ducimus sunt sit sed, laborum praesentium reprehenderit vitae similique. Dolor, quidem natus.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis maxime tenetur saepe eius aut amet, quia neque quaerat doloremque expedita consequuntur deleniti, recusandae, itaque numquam iste odit ex ipsum dolore.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae exercitationem molestias libero asperiores pariatur nulla minus laboriosam ipsam ipsa? Magni ratione dolor temporibus commodi debitis eum cumque facilis deleniti necessitatibus.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto eveniet quaerat sed reprehenderit facere dignissimos, officia earum suscipit repellendus voluptatem inventore provident mollitia ipsa saepe commodi quas omnis quasi. Esse!</p>
+            <aside class="static">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro nostrum quibusdam amet quaerat. Itaque dicta provident exercitationem dolores porro repudiandae magni quia, architecto repellendus pariatur quos at vitae? Molestias, dicta!
+            </aside>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam autem deserunt aliquam maxime reiciendis error amet molestiae temporibus et? Illo quibusdam quis nam dolor earum. Omnis maiores tenetur voluptatibus id?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi quas tempore laudantium dolore temporibus. Odio suscipit eaque est, quos voluptatum eveniet praesentium voluptates tenetur ullam dolorum eos ab beatae aliquam?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iusto voluptates quo laboriosam! Totam, nemo architecto! Temporibus, voluptatibus. Magni obcaecati omnis commodi tempore hic recusandae modi impedit quidem itaque minus.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint animi nulla est illum ab voluptas eaque natus aspernatur iusto dolorum. Minima recusandae, dolor nesciunt excepturi maxime rem praesentium vero corporis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illo possimus ab distinctio ex optio! Neque sequi id laborum libero, quidem consequatur enim placeat nesciunt. Beatae delectus quia ut maiores?
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. In quo dolor saepe modi quidem ex, fuga veniam esse quasi maxime aliquid eligendi perferendis, quisquam sed? Consequatur reiciendis sequi veritatis in?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi id, assumenda officiis commodi, repellendus sapiente quisquam veniam nisi eum architecto aliquid. Veritatis iure asperiores doloribus reiciendis eveniet quas optio officia.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime accusamus nulla libero eaque sequi! Modi consequatur voluptas autem. Labore voluptates dignissimos sunt reprehenderit consequatur, ipsa tenetur nemo quam inventore in!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sapiente dolore quae consequatur! Nisi, nemo accusantium hic dicta quaerat sapiente deserunt suscipit, error dolor veritatis eius voluptate minima aut voluptatibus.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, eos autem soluta nostrum, amet dicta placeat sapiente blanditiis molestias minus esse voluptate porro, dolores quia quaerat quae corporis. Harum, quo.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptatum voluptatem reiciendis ea, maiores nihil ab, qui ullam quibusdam impedit illum reprehenderit nulla laborum odio ratione commodi consectetur omnis iusto?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum id modi, dignissimos quia fugiat obcaecati esse repellendus hic, odio dolorum quibusdam quo nisi eum corrupti, neque laborum similique ducimus assumenda.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos consectetur fuga id tempora, quisquam ea hic doloribus cumque laboriosam modi officia, possimus voluptatum corporis architecto qui. Dicta eum provident at!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia maxime dolorum, tempore ex dicta minus deserunt, nihil dignissimos error possimus placeat adipisci natus minima nostrum eos eveniet, beatae expedita animi.
+            </article>
+        </section>
+        <section>
+            <article>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et voluptatibus quidem expedita neque, vel minima ipsum cupiditate nostrum! Molestiae sapiente nesciunt natus repellat similique expedita nisi rerum minima. Cupiditate, recusandae?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus earum voluptas neque eligendi quae odio, qui voluptatum? Cum, dolorum necessitatibus ut voluptates dolore sequi nisi a magnam, sint molestiae ea?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, unde cupiditate? Ab nobis itaque porro, tempora voluptatem libero ipsa perspiciatis rem vitae recusandae ducimus ut, unde labore hic cumque facilis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum exercitationem illum ipsam perspiciatis architecto dolores eveniet dignissimos optio omnis unde odio perferendis molestias natus, dolore nihil voluptatum repellat! Quasi, excepturi.
+            </article>
+            <aside class="static">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quidem quos omnis at, placeat minus laboriosam iusto totam incidunt ratione expedita neque ea numquam quasi labore corrupti nesciunt nemo tempore!
+            </aside>
+            <article>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et voluptatibus quidem expedita neque, vel minima ipsum cupiditate nostrum! Molestiae sapiente nesciunt natus repellat similique expedita nisi rerum minima. Cupiditate, recusandae?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus earum voluptas neque eligendi quae odio, qui voluptatum? Cum, dolorum necessitatibus ut voluptates dolore sequi nisi a magnam, sint molestiae ea?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, unde cupiditate? Ab nobis itaque porro, tempora voluptatem libero ipsa perspiciatis rem vitae recusandae ducimus ut, unde labore hic cumque facilis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum exercitationem illum ipsam perspiciatis architecto dolores eveniet dignissimos optio omnis unde odio perferendis molestias natus, dolore nihil voluptatum repellat! Quasi, excepturi.
+            </article>
+        </section>
+        <section>
+            <article>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et voluptatibus quidem expedita neque, vel minima ipsum cupiditate nostrum! Molestiae sapiente nesciunt natus repellat similique expedita nisi rerum minima. Cupiditate, recusandae?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus earum voluptas neque eligendi quae odio, qui voluptatum? Cum, dolorum necessitatibus ut voluptates dolore sequi nisi a magnam, sint molestiae ea?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, unde cupiditate? Ab nobis itaque porro, tempora voluptatem libero ipsa perspiciatis rem vitae recusandae ducimus ut, unde labore hic cumque facilis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum exercitationem illum ipsam perspiciatis architecto dolores eveniet dignissimos optio omnis unde odio perferendis molestias natus, dolore nihil voluptatum repellat! Quasi, excepturi.
+            </article>
+            <aside class="static">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quidem quos omnis at, placeat minus laboriosam iusto totam incidunt ratione expedita neque ea numquam quasi labore corrupti nesciunt nemo tempore!
+            </aside>
         </section>
     </main>
     <footer>
