--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             About
         </a>
     </nav>
-    <main class="parallax">
+    <main class="parallax-full">
         <section>
-            <aside class="static">
+            <aside>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro nostrum quibusdam amet quaerat. Itaque dicta provident exercitationem dolores porro repudiandae magni quia, architecto repellendus pariatur quos at vitae? Molestias, dicta!
             </aside>
             <article>
@@ -60,6 +60,11 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus earum voluptas neque eligendi quae odio, qui voluptatum? Cum, dolorum necessitatibus ut voluptates dolore sequi nisi a magnam, sint molestiae ea?
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, unde cupiditate? Ab nobis itaque porro, tempora voluptatem libero ipsa perspiciatis rem vitae recusandae ducimus ut, unde labore hic cumque facilis.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum exercitationem illum ipsam perspiciatis architecto dolores eveniet dignissimos optio omnis unde odio perferendis molestias natus, dolore nihil voluptatum repellat! Quasi, excepturi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium possimus minus voluptatum autem magnam beatae obcaecati quisquam laboriosam, reiciendis veritatis fugiat dolorum! Consequuntur rerum, ab exercitationem eos dolores distinctio.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non voluptates harum iste tenetur aliquam quod aliquid nisi quam? Id assumenda dolore illum iure iste incidunt alias ipsum possimus cupiditate modi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nisi soluta, laboriosam voluptatum exercitationem fugiat rerum pariatur repellendus quas. Voluptas et consectetur eligendi eveniet mollitia iure consequatur cumque iusto recusandae!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure neque quaerat aliquid minus cumque, minima totam iste dolorem quis harum dignissimos in. Tempora, soluta! Impedit odio earum similique assumenda.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, sed perspiciatis quisquam fugiat velit rem incidunt eligendi, nihil asperiores in similique alias, corporis quibusdam facere? Aliquid similique ipsam vero optio?
             </article>
             <aside class="static">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quidem quos omnis at, placeat minus laboriosam iusto totam incidunt ratione expedita neque ea numquam quasi labore corrupti nesciunt nemo tempore!
@@ -80,6 +85,11 @@
             </article>
             <aside class="static">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quidem quos omnis at, placeat minus laboriosam iusto totam incidunt ratione expedita neque ea numquam quasi labore corrupti nesciunt nemo tempore!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam delectus ut quis molestias recusandae quas error repudiandae dolorem, fugiat porro cumque facilis itaque laboriosam iure asperiores iste. Similique, illum recusandae!
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, laborum saepe, laudantium rerum illo harum similique expedita odio illum repudiandae sunt rem minima qui repellat tempore magnam molestiae cumque eveniet.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto tempora eaque dicta quidem ratione laborum placeat libero, maiores non. Veritatis harum, iure in suscipit sit natus unde autem assumenda error.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, vel quasi? Repellat officia placeat perspiciatis laudantium hic facilis, odit cum, soluta quam illum neque praesentium ad doloribus libero perferendis? Repudiandae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eius doloremque atque veniam. Molestias commodi sunt ullam blanditiis quod facilis ipsam magni hic? Quos impedit perferendis laborum, illo atque reiciendis!
             </aside>
         </section>
     </main>
