FIX href to be always root-wise

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
 
-    <link rel="apple-touch-icon-precomposed" href="./img/favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
     <link rel="apple-touch-icon" href="./img/favicon.png">
-    <link rel="icon" href="./img/favicon.png">
+    <link rel="icon" href="/img/favicon.png">
 </head>
 <body>
     <nav>
